--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -29,6 +29,16 @@
         color: #ff6158;
         font-size: 18px;
     }
+    /* .skills-modal-body {
+         max-height: 400px; 
+    } */
+    .modal-close {
+        display: block;
+        margin-left: 310px;
+        font-size: 30px;
+        cursor: pointer;
+        clear: both;
+    }
   .header-nav li a {
     font-family: "CircularStd-Book"; 
       font-size: 16px;
@@ -133,6 +143,9 @@
     right: 20px;
     top: 50%;
 }
+.slider li:hover , .verticle-slide li:hover {
+    cursor: pointer;
+}
  .slider li:not(:first-child):not(:last-child)::before, .verticle-slider li:not(:first-child):not(:last-child)::before {
     content: '';
     display: inline-block;
@@ -148,18 +161,26 @@
     background-color: #ff6158 !important;
 }
 .verticle-slider{
-    padding-top: 10px;
+    padding-top: 25px;
     margin-bottom: 10px;
 }
 .verticle-slider .list-inline-item {
     cursor: pointer;
 }
- .footer-background {
+.footer-background {
     background-color: #ddd3d0;
 }
 .footer-background-grey {
     background-color: #eaeaea;
 }
+.keywords{
+    line-height: 1.5em;
+    height: 3em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+ }
 .footer-copyright {
     font-size: 15.5px;
     font-weight: normal;
@@ -221,14 +242,25 @@
     text-align: left;
     color: #181818;
     margin-top:7px;
+    line-height: 1.5em;
+    height: 1.3em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
  }
  .card-desc{
-    margin-top:18px;
+    margin-top:5px;
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 0.32px;
     text-align: left;
     color: rgba(24, 24, 24, 0.5);
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    height: 2.2em;
+    line-height: 1.2em;
  }
  
  .keywords span{
@@ -242,7 +274,7 @@
     margin: 0 2px;
  }
  .details_btn{
-    margin-top:20px;
+    margin-top:5px;
     border: solid 1px rgba(116, 116, 116, 0.4);
     background-color: #ffffff;
     font-size: 14.5px;
@@ -460,6 +492,7 @@
     padding: 4px 9px;
     border: solid 1px rgba(52, 46, 54, 0.1);
     line-height: 1.5;
+    cursor: pointer;
 }
 .main_heading{
     font-size: 36px;
@@ -629,7 +662,13 @@
         padding-bottom: 20px;
     }
     .Do-you-want-to-join-experts-Dont-wait {
-        margin:15px auto;
+        margin:10px auto;
+    }
+    .profile-padding > .form-group > .form-control {
+        width: 210px;
+    }
+    .profile-padding {
+        padding-bottom: 28px;
     }
 }
 @media (min-width: 1590px){
